# EnterpriseMind

./: .gitignore  README.md  compose.dev.yml  environment.yml  tatus
backend/: .env.example  .it-token  alembic.ini  chat-response.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0003_stage2_stage2_datasets_and_business_views.py  0004_stage4_stage4_prompts_evaluations_and_jobs.py  0005_preserve_citations_on_document_delete.py  0006_monitor_events.py  3d0875806d85_identity.py  4d3f7ad3c90d_knowledge_and_conversations.py
backend/app/: main.py  models.py
backend/app/agents/: composite.py  contracts.py  domain_agents.py  intent_recognizer.py  orchestrator.py  router.py
backend/app/api/: chat.py  chat_stream.py  health.py
backend/app/auth/: admin_api.py  api.py  dependencies.py  models.py  schemas.py  security.py  service.py
backend/app/conversations/: api.py  cache.py  memory_schemas.py  memory_service.py  memory_store.py  models.py  service.py
backend/app/database_agent/: executor.py  generator.py  models.py  repository.py  service.py  validator.py
backend/app/evaluation/: api.py  benchmark_compare.py  benchmark_contracts.py  benchmark_metrics.py  benchmark_monitoring.py  benchmark_runner.py  contracts.py  executor.py  judge.py  models.py  orchestrator_executor.py  prompt_service.py  resolver.py  runner.py  safety.py  scorers.py
backend/app/knowledge/: access.py  api.py  chunking.py  embedding.py  evidence_gate.py  fusion.py  job_service.py  jobs.py  management.py  models.py  parsers.py  query_normalizer.py  query_rewriter.py  reranker.py  retrieval.py  schemas.py  service.py  vector_store.py
backend/app/model_gateway/: contracts.py  demo.py  external.py  gateway.py  ollama.py  sensitivity.py
backend/app/monitoring/: api.py  context.py  contracts.py  instrumentation.py  models.py  query_service.py  repository.py  schemas.py  scoring.py  service.py
backend/app/shared/: config.py  database.py  trace.py
backend/app/tools/: builtins.py  contracts.py  manager.py
backend/app/traces/: __init__.py  api.py  schemas.py  service.py
backend/enterprisemind_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/evaluation/cases/: agent_benchmark_suite.json  composite.jsonl  intent.jsonl  monitoring.jsonl  quality.jsonl  (+2 more)
backend/scripts/: check_ollama.py  check_readonly_database.py  reindex_knowledge.py  seed_stage1.py  seed_stage2.py  seed_stage4.py
backend/tests/: conftest.py  test_config_defaults.py  test_health.py
(+154 files in other folders)
