[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprisemind-backend"
version = "0.2.0"
description = "EnterpriseMind enterprise knowledge assistant backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "httpx==0.28.1",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "pwdlib[argon2]>=0.2,<1",
    "PyJWT>=2.10,<3",
    "python-multipart>=0.0.20,<1",
    "qdrant-client>=1.14,<1.16",
    "PyMuPDF>=1.25,<2",
    "python-docx>=1.1,<2",
    "redis>=5.2,<7",
    "rq==2.10.0",
    "sqlglot>=26,<30",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "aiosqlite>=0.20,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "app.auth.dependencies.require_role",
]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app"]

[[tool.mypy.overrides]]
module = ["fitz", "fitz.*"]
ignore_missing_imports = true
